--- a/.github/workflows/send_show_link.yml
+++ b/.github/workflows/send_show_link.yml
@@ -17,8 +17,9 @@ jobs:
          with:
            r-version: '4.4.3'
 
-      -  name: Gather dependencies
-         uses: r-lib/actions/setup-r-dependencies@v2
+      -  name: Install libcurl
+         if: runner.os == 'Linux'
+         run: sudo apt-get update -y && sudo apt-get install -y libcurl4-openssl-dev
 
       -  name: Set up renv
          uses: r-lib/actions/setup-renv@v2
