resolve variable naming differences

--- a/.github/workflows/send_show_link.yml
+++ b/.github/workflows/send_show_link.yml
@@ -27,6 +27,6 @@ jobs:
       -  name: Run send_telegram
          run: Rscript -e 'source("R/send_telegram.R")'
          env:
-           API_KEY: ${{ secrets.R_TELEGRAM_BOT_TIM_TAO_BOT }}
-           ID:      ${{ secrets.TELEGRAM_PERSONAL_ID }}
+           R_TELEGRAM_BOT_TIM_TAO_BOT: ${{ secrets.R_TELEGRAM_BOT_TIM_TAO_BOT }}
+           TELEGRAM_PERSONAL_ID:      ${{ secrets.TELEGRAM_PERSONAL_ID }}
       
